# librium/api/book.py
@@ -1,33 +1,0 @@
-from librium.database import Book
-
-
-def create():
-    pass
-
-
-def read():
-    pass
-
-
-def read_by_id():
-    pass
-
-
-def read_by_isbn():
-    pass
-
-
-def update_by_id():
-    pass
-
-
-def update_by_isbn():
-    pass
-
-
-def delete_by_id():
-    pass
-
-
-def delete_by_isbn():
-    pass
