# librium/api/genre.py
@@ -1,20 +1,0 @@
-from librium.database import Genre
-
-def create():
-    pass
-
-
-def read():
-    pass
-
-
-def read_one():
-    pass
-
-
-def update():
-    pass
-
-
-def delete():
-    pass
