# librium/api/series.py
@@ -1,21 +1,0 @@
-from librium.database import Series
-
-
-def create():
-    pass
-
-
-def read():
-    pass
-
-
-def read_one():
-    pass
-
-
-def update():
-    pass
-
-
-def delete():
-    pass
